--- a/JattanaNursury/appsettings.json
+++ b/JattanaNursury/appsettings.json
@@ -1,13 +1,17 @@
 {
-  "ConnectionStrings": {
-    //"LocalConnection": "Server=(localdb)\\Local;Database=JattanaNursury;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
+  //Minimum level to log in these settings
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    //structural logging
+    "Enrich": ["FromLogContext","WithMachineName","WithProcessId","WithThreadId"]
   },
+ 
   "AllowedHosts": "*"
 }
-
