serilog configured for basic logging

--- a/JattanaNursury/appsettings.json
+++ b/JattanaNursury/appsettings.json
@@ -10,7 +10,11 @@
       }
     },
     //structural logging
-    "Enrich": ["FromLogContext","WithMachineName","WithProcessId","WithThreadId"]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    //These are called sinqs
+    "WriteTo": [
+      {"Name": "Console"}
+    ]
   },
  
   "AllowedHosts": "*"
