--- a/JattanaNursury/appsettings.json
+++ b/JattanaNursury/appsettings.json
@@ -13,7 +13,15 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
     //These are called sinqs
     "WriteTo": [
-      {"Name": "Console"}
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\Logs\\log.txt",
+          "outputTemplate": "{Timestamp:G} {Message}{NewLine:1}{Exception:1}"
+        }
+
+      }
     ]
   },
  
