added Seq web server and deployed on docker

--- a/JattanaNursury/appsettings.json
+++ b/JattanaNursury/appsettings.json
@@ -13,14 +13,28 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
     //These are called sinqs
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       {
         "Name": "File",
         "Args": {
           "path": "D:\\Logs\\log.txt",
           "outputTemplate": "{Timestamp:G} {Message}{NewLine:1}{Exception:1}"
         }
-
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\Logs\\log.json",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:8081"
+        }
       }
     ]
   },
