--- a/ECommerce/ECommerce.csproj
+++ b/ECommerce/ECommerce.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\default\" />
     <Folder Include="wwwroot\images\product\" />
   </ItemGroup>
 
