--- a/ECommerce/appsettings.json
+++ b/ECommerce/appsettings.json
@@ -1,25 +1,25 @@
 {
   //Minimum level to log in these settings
   "Serilog": {
-    "Using": [],
+    "Using": ["Serilog.Sinks.Console"],
     "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
+      "Default": "Information"
     },
     //structural logging
     "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
     //These are called sinqs
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Information"
+        }
       },
       {
         "Name": "File",
         "Args": {
           "path": "D:\\Logs\\log.txt",
+          "restrictedToMinimumLevel": "Warning",
           "outputTemplate": "{Timestamp:G} {Message}{NewLine:1}{Exception:1}"
         }
       },
@@ -27,17 +27,19 @@
         "Name": "File",
         "Args": {
           "path": "D:\\Logs\\log.json",
+          "restrictedToMinimumLevel": "Warning",
           "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
         }
       },
       {
         "Name": "Seq",
         "Args": {
-          "serverUrl": "http://localhost:8081"
+          "serverUrl": "http://localhost:8081",
+          "restrictedToMinimumLevel": "Warning"
         }
       }
     ]
   },
- 
+
   "AllowedHosts": "*"
 }
