--- a/ECommerce.Data/ECommerce.Data.csproj
+++ b/ECommerce.Data/ECommerce.Data.csproj
@@ -10,5 +10,6 @@
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.23" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.23" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.26" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
 	</ItemGroup>
 </Project>
