--- a/ECommerce.Integration.Tests/ECommerce.Integration.Tests.csproj
+++ b/ECommerce.Integration.Tests/ECommerce.Integration.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ECommerce\ECommerce.csproj" />
+    <ProjectReference Include="..\PostgresqlMigrations\PostgresqlMigrations.csproj" />
     <ProjectReference Include="..\SqlServerMigrations\SqlServerMigrations.csproj" />
   </ItemGroup>
 
